frontend/k8s/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: farmassist
  labels:
    app: farmassist
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 50%
      maxSurge: 50%
  replicas: 3
  selector:
    matchLabels:
      app: farmassist
  template:
    metadata:
      labels:
        app: farmassist
    spec:
      imagePullSecrets:
      - name: my-registry-key
      containers:
      - name: farmassist
        image: docker.io/nyamwange/frontend
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 5173
        resources:
          requests:
            memory: 64Mi
            cpu: 100m
          limits:
            memory: 128Mi
            cpu: 300m
