frontend/k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: farmassist
spec:
  selector:
    app: farmassist
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5173
  type: NodePort
